codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__compact_queues_user_messages_snapshot.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
assertion_line: 3591
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---










• Working (0s • esc to interrupt)

• Messages to be submitted at end of turn
  ↳ Steer submitted while /compact was running.
▌
▌ Ask Codex to do anything
▌
  GPT-5.6-Sol default · /tmp/project
